tests/semantic/flow_analysis/snapshots/r#mod__semantic__flow_graph_analyzing__return_check__return_in_both_if_else.snap
---
source: tests/semantic/flow_graph_analyzing/return_check.rs
expression: "&test_ctx.prog_ctx.func_ctx"
---
funcs:
  0:
    name: do_something
    namespace_id: 0
    func_type: Global
    params:
      - label: ~
        name: param
        var_id: 0
        value_type:
          Primitive: Bool
        def_val: ~
        range:
          start: 0
          end: 0
    return_type:
      Primitive: Int
    block:
      body:
        - If:
            main:
              condition:
                kind:
                  Identifier: 0
                value_type:
                  Primitive: Bool
                range:
                  start: 0
                  end: 0
              block:
                body:
                  - Return:
                      value:
                        kind:
                          IntLiteral: 1
                        value_type:
                          Primitive: Int
                        range:
                          start: 0
                          end: 0
                scope_id: 3
            else_ifs: []
            else_block:
              body:
                - Return:
                    value:
                      kind:
                        IntLiteral: 1
                      value_type:
                        Primitive: Int
                      range:
                        start: 0
                        end: 0
              scope_id: 4
      scope_id: 2
    range:
      start: 0
      end: 0
member_functions: {}
global_functions:
  ? - 0
    - do_something
  : 0
next_function_id: 1
